@@ -12,13 +12,13 @@ Author: Kenneth Benoit [aut, cre],
     Pablo Barberá [ctb],
     Kohei Watanabe [ctb],
     Benjamin Lauderdale [ctb]
-Version: 0.8.2-1
-Date: 2015-08-14
+Version: 0.8.3-1
+Date: 2015-08-15
 Description: A fast, flexible toolset for for the management, processing, and
     quantitative analysis of textual data in R.
 License: GPL-3
 Depends:
-    R (>= 3.2.1)
+    R (>= 3.2.0)
 Imports:
     methods,
     utils,
