@@ -52,6 +52,9 @@ S3method(readability,corpus)
 S3method(removeFeatures,collocations)
 S3method(removeFeatures,dfm)
 S3method(removeFeatures,tokenizedTexts)
+S3method(sample,corpus)
+S3method(sample,default)
+S3method(sample,dfm)
 S3method(scrabble,character)
 S3method(segment,character)
 S3method(segment,corpus)
@@ -120,6 +123,7 @@ export(phrasetotoken.corpus)
 export(quantedaformat2dtm)
 export(readability)
 export(removeFeatures)
+export(sample)
 export(scrabble)
 export(segment)
 export(selectFeatures)
