@@ -617,30 +617,45 @@ ndoc.corpus <- function(x) {
 
 
 
-# # Corpus sampling
-# #
-# # Takes a random sample of the specified size from a corpus, with or without replacement
-# # 
-# # @param corpus An existing corpus to be sampled
-# # @param size A positive number, the number of texts to return
-# # @param replace Should sampling be with replacement?
-# # @param prob Not implemented
-# # @export
-# # @examples
-# # data(inaugCorpus)
-# # inaugSamp <- sample(inaugCorpus, 200, replace=TRUE)
-# sample.corpus <- function(corpus, size=n, replace=FALSE, prob=NULL){
-#   if(!is.null(prob)) stop("prob argument is not implemented for corpus")
-#   atts <- corpus$docvars
-#   sampleInds <- sample(nrow(atts), size=size, replace=replace)
-#   newAtts <- atts[sampleInds,]
-#   newTexts <- newAtts[[1]]
-#   newAtts <- newAtts[2:length(newAtts)]
-#   newCorp <- corpusCreate(newTexts, newAtts)
-#   newCorp$metadata["created"] <- paste(newCorp$metadata["created"], "sampled from",
-#                                        corpus$metadata["source"], collapse= " ")
-#   return(newCorp)
-# }
+#' @export
+#' @return A corpus object with number of documents equal to \code{size}, drawn 
+#'   from the corpus \code{x}.  The returned corpus object will contain all of 
+#'   the meta-data of the original corpus, and the same document variables for 
+#'   the documents selected.
+#' @seealso \code{\link{sample}}
+#' @rdname sample
+#' @examples
+#' # sampling from a corpus
+#' summary(sample(inaugCorpus, 5)) 
+#' summary(sample(inaugCorpus, 10, replace=TRUE))
+sample.corpus <- function(x, size = ndoc(x), replace = FALSE, prob = NULL, ...) {
+    documents(x) <- documents(x)[sample(ndoc(x), size, replace, prob), ]
+    x
+}
+
+#' Randomly sample documents or features
+#' 
+#' Takes a random sample or documents or features of the specified size from a 
+#' corpus or document-feature matrix, with or without replacement
+#' 
+#' @param x a corpus or dfm object whose documents or features will be sampled
+#' @param size a positive number, the number of documents to select
+#' @param replace Should sampling be with replacement?
+#' @param prob A vector of probability weights for obtaining the elements of the
+#'   vector being sampled.
+#' @param ... required for defining methods that extend
+#'   \code{\link[base]{sample}}, which is not defined as a generic
+#'   method in the \pkg{base} package.
+#' @export
+sample <- function(x, size, replace = FALSE, prob = NULL, ...) {
+    UseMethod("sample")
+}
+
+#' @export
+#' @rdname sample
+sample.default <- function(x, size, replace = FALSE, prob = NULL, ...) {
+    base::sample(x, size, replace, prob)
+}
 
 
 #' extract a subset of a corpus
